--- a/backoffice.html
+++ b/backoffice.html
@@ -16,6 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+          <img src="assets/Logo.png" alt="shop logo" id="logo" />
           <a class="navbar-brand" href="#">E-CODEShop</a>
           <button
             class="navbar-toggler"
@@ -93,9 +94,7 @@
               <input type="number" class="form-control" id="price" />
             </div>
 
-            <button type="submit" class="btn btn-primary">
-              Salva prodotto
-            </button>
+            <button type="submit" class="btn btn-primary">SAVE PRODUCT</button>
           </form>
         </div>
       </div>
