--- a/detail.html
+++ b/detail.html
@@ -16,6 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+          <img src="assets/Logo.png" alt="shop logo" id="logo" />
           <a class="navbar-brand" href="#">E-CODEShop</a>
           <button
             class="navbar-toggler"
