'sospendo' barra search

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </li>
             </ul>
 
-            <form class="d-flex" role="search" id="custom-search">
+            <!-- <form class="d-flex" role="search" id="custom-search">
               <input
                 class="form-control me-2"
                 type="search"
@@ -71,7 +71,7 @@
               <button class="btn btn-outline-success" type="submit">
                 Search
               </button>
-            </form>
+            </form> -->
           </div>
         </div>
       </nav>
