--- a/detail.html
+++ b/detail.html
@@ -67,11 +67,20 @@
     <main>
       <h1 class="text-center my-4">E-CODE - Il tuo Tech Shop di fiducia!</h1>
       <div class="container">
-        <div class="row justify-content-center" id="products-details">
+        <div class="row justify-content-center mb-4" id="products-details">
           <!-- creo la card -->
         </div>
       </div>
     </main>
+    <footer class="bg-tertiary text-center text-lg-start mt-4">
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(203, 198, 198, 0.2)"
+      >
+        © 2024 E-CODEShop: All rights reserved.
+        <a class="text-dark" href="/">www.ecodeshop.com</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
